--- a/3 Probability/Probability Notes.Rmd
+++ b/3 Probability/Probability Notes.Rmd
@@ -82,3 +82,106 @@ pnorm(70.5, mean(x), sd(x)) - pnorm(69.5, mean(x), sd(x))
 mean(x <= 70.9) - mean(x <= 70.1)
 pnorm(70.9, mean(x), sd(x)) - pnorm(70.1, mean(x), sd(x))
 ```
+
+## Probability Density
+
+### ![](images/clipboard-383564387.png)
+
+```{r}
+avg <- mean(x)
+s <- sd(x)
+1 - pnorm(76, avg, s)
+```
+
+![](images/clipboard-2948622746.png)
+
+The curve is the probability density function for the normal distribution.
+
+## Plotting the Probability Density
+
+### Plotting the probability density for the normal distribution
+
+![](images/clipboard-6192111.png)
+
+We can use `dnorm()` to plot the density curve for the normal distribution. `dnorm(z)` gives the probability density of a certain z-score, so we can draw a curve by calculating the density over a range of possible values of z.
+
+First, we generate a series of z-scores covering the typical range of the normal distribution. Since we know 99.7% of observations will be within , we can use a value of slightly larger than 3 and this will cover most likely values of the normal distribution. Then, we calculate , which is `dnorm()` of the series of z-scores. Last, we plot against .
+
+```{r}
+library(tidyverse)
+x <- seq(-4, 4, length = 100)
+data.frame(x, f = dnorm(x)) %>%
+    ggplot(aes(x, f)) +
+    geom_line()
+```
+
+Here is the resulting plot:
+
+![](images/clipboard-679013542.png)
+
+Note that `dnorm()` gives densities for the standard normal distribution by default. Probabilities for alternative normal distributions with mean `mu` and standard deviation `sigma` can be evaluated with:
+
+```{r}
+dnorm(z, mu, sigma)
+```
+
+## Monte Carlo Simulations
+
+### Monte Carlo Simulations
+
+`rnorm(n, avg, s)` generates `n` random numbers from the normal distribution with average `avg` and standard deviation `s`.
+
+By generating random numbers from the normal distribution, we can simulate height data with similar properties to our dataset. Here we generate simulated height data using the normal distribution.
+
+### Code: Generating normally distributed random numbers
+
+```{r}
+# define x as male heights from dslabs data
+library(tidyverse)
+library(dslabs)
+data(heights)
+x <- heights %>% filter(sex=="Male") %>% pull(height)
+
+# generate simulated height data using normal distribution - both datasets should have n observations
+n <- length(x)
+avg <- mean(x)
+s <- sd(x)
+simulated_heights <- rnorm(n, avg, s)
+
+# plot distribution of simulated_heights
+data.frame(simulated_heights = simulated_heights) %>%
+    ggplot(aes(simulated_heights)) +
+    geom_histogram(color="black", binwidth = 2)
+```
+
+### Code: Monte Carlo simulation of tallest person over 7 feet
+
+```{r}
+B <- 10000
+tallest <- replicate(B, {
+    simulated_data <- rnorm(800, avg, s)    # generate 800 normally distributed random heights
+    max(simulated_data)    # determine the tallest height
+})
+mean(tallest >= 7*12)    # proportion of times that tallest person exceeded 7 feet (84 inches)
+```
+
+## Other continuous distributions
+
+-   You may encounter other continuous distributions (Student t, chi-squared, exponential, gamma, beta, etc.).
+
+-   R provides functions for density (`d`), quantile (`q`), probability distribution (`p`) and random number generation (`r`) for many of these distributions.
+
+-   Each distribution has a matching abbreviation (for example, `norm()` or `t()`) that is paired with the related function abbreviations (**`d`**`, p, q, r`) to create appropriate functions.
+
+-   For example, use `rt()` to generate random numbers for a Monte Carlo simulation using the Student t distribution.
+
+### Code: Plotting the normal distribution with dnorm
+
+Use d to plot the density function of a continuous distribution. Here is the density function for the normal distribution (abbreviation `norm()`):
+
+```{r}
+x <- seq(-4, 4, length.out = 100)
+data.frame(x, f = dnorm(x)) %>%
+    ggplot(aes(x,f)) +
+    geom_line()
+```
