finished The Big Short data camp

--- a/3 Probability/Probability Notes.Rmd
+++ b/3 Probability/Probability Notes.Rmd
@@ -1053,6 +1053,8 @@ There is 1 assignment that uses the DataCamp platform for you to practice your 
 
 ### Code: Interest rate sampling model
 
+This is the probability of defaulting; it's not going to happen for sure. That's why the values change.
+
 ```{r}
 n <- 1000
 loss_per_foreclosure <- -200000
@@ -1062,6 +1064,8 @@ sum(defaults * loss_per_foreclosure)
 ```
 
 ### Code: Interest rate Monte Carlo simulation
+
+Use a Monte Carlo simulation to plot the distribution of losses.
 
 ```{r}
 B <- 10000
@@ -1080,12 +1084,16 @@ data.frame(losses_in_millions = losses/10^6) %>%
     geom_histogram(binwidth = 0.6, col = "black")
 ```
 
+We do not need to use a Monte Carlo simulation: the CLT tells us that because our losses are a sum of independent draws, its distribution is approximately normal with expected value and standard deviation given by the formulas.
+
 ### Code: Expected value and standard error of the sum of 1,000 loans
 
 ```{r}
 n*(p*loss_per_foreclosure + (1-p)*0)    # expected value 
 sqrt(n)*abs(loss_per_foreclosure)*sqrt(p*(1-p))    # standard error
 ```
+
+We now want to set an interest rate to guarantee that on average, we break even. We need to add a quantity x to each loan, which in this case are represented by draws, so that the expected value is zero (breaking even).
 
 ### Code: Calculating interest rates for expected value of 0
 
@@ -1102,16 +1110,33 @@ On a \$180,000 loan, this equals an interest rate of:
 x/180000
 ```
 
+Although this interest rate guarantees on average that we break even, there's a 50% chance that we will lose money. If our bank loses money, we have to close it down. So we need to pick an interest rate that makes it unlikely for this to happen. At the same time, if the interest rate is too high, our clients will go to another bank.
+
 ### Equations: Calculating interest rate for 1% probability of losing money
 
+What does x have to be if we want our chances of losing money to be one in 100.
+
 ![](images/clipboard-902204981.png)
+
+![](images/clipboard-1948934593.png)
+
+Red box is a standard normal random variable.
+
+![](images/clipboard-2394044801.png)
+
+Note that since the term on the left is a normal random variable with expected value of zero and standard error one, it means that the quantity on the right must be equal to qnorm(0.01) = -2.32. Then the equation above will hold true. If we set little z to be qnorm of 0.01, this will give you a value for little z for which the following formula is true. ![](images/clipboard-881981196.png)
+
+The probability of big Z less than or equal to little z is equal to 0.01. If we set little z to be qnorm of 0.01, this will give you a value of little z for which the following formula is true.
+
+![](images/clipboard-3650732006.png)
 
 ### Code: Calculating interest rate for 1% probability of losing money
 
 ```{r}
 l <- loss_per_foreclosure
 z <- qnorm(0.01)
-x <- -l*( n*p - z*sqrt(n*p*(1-p)))/ ( n*(1-p) + z*sqrt(n*p*(1-p)))\x
+x <- -l*( n*p - z*sqrt(n*p*(1-p)))/ ( n*(1-p) + z*sqrt(n*p*(1-p)))
+x
 x/180000    # interest rate
 loss_per_foreclosure*p + x*(1-p)    # expected value of the profit per loan
 n*(loss_per_foreclosure*p + x*(1-p)) # expected value of the profit over n loans
@@ -1131,3 +1156,252 @@ profit <- replicate(B, {
 mean(profit)    # expected value of the profit over n loans
 mean(profit<0)    # probability of losing money
 ```
+
+### The Big Short
+
+-   The Central Limit Theorem states that the sum of independent draws of a random variable follows a normal distribution. However, when the draws are not independent, this assumption does not hold.
+
+-   If an event changes the probability of default for all borrowers, then the probability of the bank losing money changes.
+
+-   Monte Carlo simulations can be used to model the effects of unknown changes in the probability of default.
+
+### Code: Expected value with higher default rate and interest rate
+
+```{r}
+p <- .04
+loss_per_foreclosure <- -200000
+r <- 0.05
+x <- r*180000
+loss_per_foreclosure*p + x*(1-p)
+```
+
+### Equations: Probability of losing money
+
+![](images/clipboard-2679697726.png)
+
+Form of the Law of Large Numbers: when n is large our average earning per loan converges to the expected earning mu.
+
+### Code: Calculating number of loans for desired probability of losing money
+
+The number of loans required is:
+
+```{r}
+z <- qnorm(0.01)
+l <- loss_per_foreclosure
+n <- ceiling((z^2*(x-l)^2*p*(1-p))/(l*p + x*(1-p))^2)
+n    # number of loans required
+n*(loss_per_foreclosure*p + x * (1-p))    # expected profit over n loans
+```
+
+### Code: Monte Carlo simulation with known default probability
+
+This Monte Carlo simulation estimates the expected profit given a known probability of default p = 0.04. Note that your results will differ from the video because the seed is not set.
+
+```{r}
+B <- 10000
+p <- 0.04
+x <- 0.05 * 180000
+profit <- replicate(B, {
+    draws <- sample( c(x, loss_per_foreclosure), n, 
+                        prob=c(1-p, p), replace = TRUE) 
+    sum(draws)
+})
+mean(profit)
+```
+
+### Code: Monte Carlo simulation with unknown default probability
+
+This Monte Carlo simulation estimates the expected profit given an unknown probability of default 0.03 \<= p \<= 0.05, modeling the situation where an event changes the probability of default for all borrowers simultaneously. Note that your results will differ from the video because the seed is not set.
+
+```{r}
+p <- 0.04
+x <- 0.05*180000
+profit <- replicate(B, {
+    new_p <- 0.04 + sample(seq(-0.01, 0.01, length = 100), 1)
+    draws <- sample( c(x, loss_per_foreclosure), n, 
+                        prob=c(1-new_p, new_p), replace = TRUE)
+    sum(draws)
+})
+mean(profit)    # expected profit
+mean(profit < 0)    # probability of losing money
+mean(profit < -10000000)    # probability of losing over $10 million
+```
+
+![](images/clipboard-2870012114.png)
+
+The theory completely breaks down, and our random variable has much more variability than expected. The financial meltdown of 2007 was due, among other things, to financial experts assuming independence when there was none.
+
+# DataCamp Assessment: The Big Short
+
+# Exercise 1. Bank earnings
+
+Say you manage a bank that gives out 10,000 loans. The default rate is 0.03 and you lose \$200,000 in each foreclosure.
+
+Create a random variable S that contains the earnings of your bank. Calculate the total amount of money lost in this scenario.
+
+-   Using the `sample` function, generate a vector called `defaults` that contains `n` samples from a vector of `c(0,1)`, where `0` indicates a payment and `1` indicates a default
+
+-   Multiply the total number of defaults by the loss per foreclosure.
+
+```{r}
+# Assign the number of loans to the variable `n`
+n <- 10000
+
+# Assign the loss per foreclosure to the variable `loss_per_foreclosure`
+loss_per_foreclosure <- -200000
+
+# Assign the probability of default to the variable `p_default`
+p_default <- 0.03
+
+# Use the `set.seed` function to make sure your answer matches the expected result after random sampling
+set.seed(1)
+
+# Generate a vector called `defaults` that contains the default outcomes of `n` loans
+defaults <- sample(c(0,1), n, replace = TRUE, prob = c(1-0.03, 0.03))
+
+
+# Generate `S`, the total amount of money lost across all foreclosures. Print the value to the console.
+S <- sum(defaults) * loss_per_foreclosure
+
+S
+```
+
+# Exercise 2. Bank earnings Monte Carlo
+
+Run a Monte Carlo simulation with 10,000 outcomes for , the sum of losses over 10,000 loans. Make a histogram of the results.
+
+-   Within a `replicate` loop with 10,000 iterations, use `sample` to generate a list of 10,000 loan outcomes: payment (0) or default (1). Use the outcome order `c(0,1)` and probability of default `p_default`.
+
+-   Still within the loop, use the function `sum` to count the number of foreclosures multiplied by `loss_per_foreclosure` to return the sum of all losses across the 10,000 loans. *If you do not take the `sum` inside the `replicate` loop, DataCamp may crash with a "Session Expired" error.*
+
+-   Plot the histogram of values using the function `hist`.
+
+```{r}
+# Assign the number of loans to the variable `n`
+n <- 10000
+
+# Assign the loss per foreclosure to the variable `loss_per_foreclosure`
+loss_per_foreclosure <- -200000
+
+# Assign the probability of default to the variable `p_default`
+p_default <- 0.03
+
+# Use the `set.seed` function to make sure your answer matches the expected result after random sampling
+set.seed(1)
+
+# The variable `B` specifies the number of times we want the simulation to run
+B <- 10000
+
+# Generate a list of summed losses 'S'. Replicate the code from the previous exercise over 'B' iterations to generate a list of summed losses for 'n' loans.  Ignore any warnings for now.
+S <- replicate(B, {
+    foreclosure_sim <- sample(c(0,1), n, replace = TRUE, prob = c(1-p_default, p_default))
+    sum(foreclosure_sim) * loss_per_foreclosure
+})
+
+
+# Plot a histogram of 'S'.  Ignore any warnings for now.
+hist(S)
+
+```
+
+# Exercise 3. Bank earnings expected value
+
+What is the expected value of S, the sum of losses over 10,000 loans? For now, assume a bank makes no money if the loan is paid.
+
+-   Using the chances of default (`p_default`), calculate the expected losses over 10,000 loans.
+
+```{r}
+# Assign the number of loans to the variable `n`
+n <- 10000
+
+# Assign the loss per foreclosure to the variable `loss_per_foreclosure`
+loss_per_foreclosure <- -200000
+
+# Assign the probability of default to the variable `p_default`
+p_default <- 0.03
+
+# Calculate the expected loss due to default out of 10,000 loans
+n * loss_per_foreclosure * p_default
+
+
+```
+
+# Exercise 4. Bank earnings standard error
+
+What is the standard error of S?
+
+-   Compute the standard error of the random variable `S` you generated in the previous exercise, the summed outcomes of 10,000 loans.
+
+```{r}
+# Assign the number of loans to the variable `n`
+n <- 10000
+
+# Assign the loss per foreclosure to the variable `loss_per_foreclosure`
+loss_per_foreclosure <- -200000
+
+# Assign the probability of default to the variable `p_default`
+p_default <- 0.03
+
+# Compute the standard error of the sum of 10,000 loans
+sqrt(n) * abs(loss_per_foreclosure) * sqrt(p_default * (1-p_default))
+```
+
+# Exercise 5. Bank earnings interest rate - 1
+
+So far, we've been assuming that we make no money when people pay their loans and we lose a lot of money when people default on their loans. Assume we give out loans for \$180,000. How much money do we need to make when people pay their loans so that our net loss is \$0?
+
+In other words, what interest rate do we need to charge in order to not lose money?
+
+-   If the amount of money lost or gained equals 0, the probability of default times the total loss per default equals the amount earned per probability of the loan being paid.
+
+-   Divide the total amount needed per loan by the loan amount to determine the interest rate.
+
+```{r}
+# Assign the loss per foreclosure to the variable `loss_per_foreclosure`
+loss_per_foreclosure <- -200000
+
+# Assign the probability of default to the variable `p_default`
+p_default <- 0.03
+
+# Assign a variable `x` as the total amount necessary to have an expected outcome of $0
+x <- -loss_per_foreclosure*p_default/(1-p_default)
+
+# Convert `x` to a rate, given that the loan amount is $180,000. Print this value to the console.
+x/180000
+```
+
+# Exercise 6. Bank earnings interest rate - 2
+
+![](images/clipboard-110778061.png)
+
+-   Use the `qnorm` function to compute a continuous variable at given quantile of the distribution to solve for `z`.
+
+![](images/clipboard-842687271.png)
+
+-   Divide `x` by the loan amount to calculate the rate.
+
+```{r}
+# Assign the number of loans to the variable `n`
+n <- 10000
+
+# Assign the loss per foreclosure to the variable `loss_per_foreclosure`
+loss_per_foreclosure <- -200000
+
+# Assign the probability of default to the variable `p_default`
+p_default <- 0.03
+
+# Generate a variable `z` using the `qnorm` function
+z = qnorm(0.05)
+
+# Generate a variable `x` using `z`, `p_default`, `loss_per_foreclosure`, and `n`
+x <- -loss_per_foreclosure*( n*p_default - z*sqrt(n*p_default*(1-p_default)))/ ( n*(1-p_default) + z*sqrt(n*p_default*(1-p_default)))
+
+# Convert `x` to an interest rate, given that the loan amount is $180,000. Print this value to the console.
+x/180000
+```
+
+# Exercise 7. Bank earnings - minimize money loss
+
+The bank wants to minimize the probability of losing money. Which of the following achieves their goal without making interest rates go up?
+
+Ans. A reduced default rate.
